Removal of geometry classes. (Issue #77)